# TestCases

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: hugo.yaml  tests_backend.yaml
STEM-cases/: hugo.toml
STEM-cases/content/: _index.md  results.md  summary.md
STEM-cases/public/: index.html  index.xml
STEM-cases/public/results/: index.html
STEM-cases/public/summary/: index.html
backend/: validators.py
data/: case_0_soft.py  case_0_stiff.py  case_1.yaml  case_16_stiff.py  case_16_stiff.yaml  case_1_example.py  case_1_example.yaml  case_2.yaml  case_6_soft_soil.yaml  case_8_soft.py  case_8_soft.yaml  case_8_stiff.py  case_8_stiff.yaml  json_output_120.json  json_output_80.json  json_output_case_0_soft.json  json_output_case_0_stiff.json  json_output_case_16_stiff.json  json_output_case_1_example.json  json_output_case_8_soft.json  json_output_case_8_stiff.json  soft_base_case_0.yaml  soft_base_case_1.yaml  soft_soil_case_1.json  soft_soil_case_1.py  soft_soil_case_1.yaml
inputs/: soft_soil.py  stiff_soil.py
scripts/: process_data.py  validators.py
tests/: test_validators.py
tests/data/: 80.yaml  case_1.yaml  case_1_empty.yaml  case_1_input_empty.yaml  case_1_json_empty.yaml  case_1_missing.yaml  case_1_no_json.yaml  input_120.py  json_output_120.json  json_output_80.json  json_output_80_alpha.json  json_output_80_length.json
